--- a/oscar/templates/dashboard/pages/delete.html
+++ b/oscar/templates/dashboard/pages/delete.html
@@ -1,21 +1,20 @@
 {% extends 'dashboard/layout.html' %}
+{% load i18n %}
 
 {% block header %}
 <div class="page-header">
-    <h1>Delete page?</h1>
+	<h1>{% trans "Delete page?" %}</h1>
 </div>
 {% endblock header%}
 
 {% block dashboard_content %}
-
-
 <form action="." method="post">
 	{% csrf_token %}
 	{{ form }}
-	<p>Delete page <strong>{{ object.title }}</strong> - are you sure?</p>
+	<p>{% blocktrans %}Delete page <strong>{{ object.title }}</strong> - are you sure?{% endblocktrans %}</p>
 	<div class="form-actions">
-	    <button type="submit" class="btn btn-danger">Delete</button>
-	    or <a href="{% url dashboard:page-list %}">cancel</a>
+		<button type="submit" class="btn btn-danger">{% trans "Delete" %}</button>
+		{% trans "or" %} <a href="{% url dashboard:page-list %}">{% trans "cancel" %}</a>.
 	</div>
 </form>
 {% endblock %}
