--- a/oscar/templates/dashboard/promotions/delete.html
+++ b/oscar/templates/dashboard/promotions/delete.html
@@ -1,22 +1,23 @@
 {% extends 'dashboard/layout.html' %}
+{% load i18n %}
 
 {% block breadcrumbs %}
 <ul class="breadcrumb">
     <li>
-        <a href="{% url dashboard:index %}">Dashboard</a>
+	<a href="{% url dashboard:index %}">{% trans "Dashboard" %}</a>
         <span class="divider">/</span>
     </li>
     <li>
-        <a href="{% url dashboard:promotion-list %}">Content blocks</a>
+	<a href="{% url dashboard:promotion-list %}">{% trans "Content blocks" %}</a>
         <span class="divider">/</span>
     </li>
-    <li class="active"><a href=".">Delete content block?</a></li>
+	<li class="active"><a href=".">{% trans "Delete content block?" %}</a></li>
 </ul>
 {% endblock %}
 
 {% block header %}
 <div class="page-header">
-    <h1>Delete content block?</h1>
+	<h1>{% trans "Delete content block?" %}</h1>
 </div>
 {% endblock header%}
 
@@ -24,10 +25,10 @@
 <form action="." method="post">
 	{% csrf_token %}
 	{{ form }}
-	<p>Delete {{ object.type }} content block <strong>{{ object.name }}</strong> - are you sure?</p>
+	<p>{% blocktrans %}Delete {{ object.type }} content block <strong>{{ object.name }}</strong> - are you sure?{% endblocktrans %}</p>
 	<div class="form-actions">
-	    <button type="submit" class="btn btn-danger">Delete</button>
-	    or <a href="{% url dashboard:promotion-list %}">cancel</a>
+		<button type="submit" class="btn btn-danger">{% trans "Delete" %}</button>
+		{% trans "or" %} <a href="{% url dashboard:promotion-list %}">{% trans "cancel" %}</a>
 	</div>
 </form>
 {% endblock %}
