--- a/oscar/templates/dashboard/promotions/form.html
+++ b/oscar/templates/dashboard/promotions/form.html
@@ -1,14 +1,16 @@
 {% extends 'dashboard/layout.html' %}
+{% load i18n %}
+
 {% block body_class %}promotions{% endblock %}
 
 {% block breadcrumbs %}
 <ul class="breadcrumb">
     <li>
-        <a href="{% url dashboard:index %}">Dashboard</a>
+	<a href="{% url dashboard:index %}">{% trans "Dashboard" %}</a>
         <span class="divider">/</span>
     </li>
     <li>
-        <a href="{% url dashboard:promotion-list %}">Content blocks</a>
+	<a href="{% url dashboard:promotion-list %}">{% trans "Content blocks" %}</a>
         <span class="divider">/</span>
     </li>
 	<li class="active"><a href=".">{{ heading }}</a></li>
@@ -31,22 +33,22 @@
 
 	    {% block inlines %} {% endblock %}
 
-        <button type="submit" class="btn btn-primary">Save</button>
-		or <a href="{% url dashboard:promotion-list %}">cancel</a>
+		<button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
+		{% trans "or" %} <a href="{% url dashboard:promotion-list %}">{% trans "cancel" %}</a>
     </form>
 </div>
 {% endblock %}
 
 {% if promotion %}
 <div class="well">
-    <h3 class="app-ico ico_favourite icon">Pages displaying this content block</h3>
+	<h3 class="app-ico ico_favourite icon">{% trans "Pages displaying this content block" %}</h3>
     {% if links %}
     <table class="table table-bordered">
     	<thead>
     		<tr>
-    			<th>Page URL</th>
-    			<th>Position on page</th>
-    			<th>Actions</th>
+				<th>{% trans "Page URL" %}</th>
+				<th>{% trans "Position on page" %}</th>
+				<th>{% trans "Actions" %}</th>
     		</tr>
     	</thead>
     	<tbody>
@@ -59,8 +61,8 @@
     					{% csrf_token %}
     					<input type="hidden" name="action" value="remove_from_page" />
     					<input type="hidden" name="pagepromotion_id" value="{{ link.id }}" />
-						<a href="{% url dashboard:promotion-list-by-url link.page_url|urlencode:"" %}" class="btn btn-info">View all blocks on this page</a>
-    					<button class="btn btn-danger btn-small" type="submit">Remove from page</button>
+						<a href="{% url dashboard:promotion-list-by-url link.page_url|urlencode:"" %}" class="btn btn-info">{% trans "View all blocks on this page" %}</a>
+						<button class="btn btn-danger btn-small" type="submit">{% trans "Remove from page" %}</button>
     				</form>
     			</td>
     		</tr>
@@ -69,18 +71,18 @@
     </table>
 
     {% else %}
-    <p>This promotion is not displayed anywhere at the moment.</p>
+	<p>{% trans "This promotion is not displayed anywhere at the moment." %}</p>
     {% endif %}
 </div>
 
 <div class="well">
-    <h3 class="app-ico ico_favourite icon">Add to a page</h3>
+	<h3 class="app-ico ico_favourite icon">{% trans "Add to a page" %}</h3>
     <form action="." method="post" class="form-inline">
     	{% csrf_token %}
     	<input type="hidden" name="action" value="add_to_page" />
     	{% include "partials/form_fields_inline.html" with form=link_form %}
         <!-- {{ link_form.as_table }} -->
-    	<button type="submit" class="btn btn-success">Add to page</button>
+		<button type="submit" class="btn btn-success">{% trans "Add to page" %}</button>
     </form>
 </div>
 {% endif %}
