--- a/oscar/templates/dashboard/promotions/handpickedproductlist_form.html
+++ b/oscar/templates/dashboard/promotions/handpickedproductlist_form.html
@@ -1,7 +1,8 @@
 {% extends 'dashboard/promotions/form.html' %}
+{% load i18n %}
 
 {% block inlines %}
-<h2>Products</h2>
+<h2>{% trans "Products" %}</h2>
 {{ product_formset.management_form }}
 {% for form in product_formset %}
 	{% include "partials/form_fields.html" with form=form %}
