--- a/oscar/templates/dashboard/reports/partials/offer_report.html
+++ b/oscar/templates/dashboard/reports/partials/offer_report.html
@@ -1,12 +1,13 @@
 {% extends 'dashboard/reports/index.html' %}
 {% load currency_filters %}
+{% load i18n %}
 
 {% block report %}
 {% if objects %}
 	<table class="table table-striped table-bordered">
 		<tr>
-			<th>Offer</th>
-			<th>Total discount</th>
+			<th>{% trans "Offer" %}</th>
+			<th>{% trans "Total discount" %}</th>
 		</tr>
 		{% for offer_discount in objects %}
 		<tr>
@@ -19,6 +20,6 @@
         {% include "catalogue/partials/pagination.html" %}
     {% endif %}
 {% else %}
-	<p>No results found.</p>
+<p>{% trans "No results found." %}</p>
 {% endif %}
 {% endblock %}
