--- a/oscar/templates/dashboard/vouchers/voucher_detail.html
+++ b/oscar/templates/dashboard/vouchers/voucher_detail.html
@@ -1,27 +1,28 @@
 {% extends 'dashboard/layout.html' %}
 {% load currency_filters %}
+{% load i18n %}
 
 {% block title %}
-Voucher '{{ voucher.name }}' | Vouchers | {{ block.super }}
+{% blocktrans %}Voucher '{{ voucher.name }}'{% endblocktrans %} | Vouchers | {{ block.super }}
 {% endblock %}
 
 {% block breadcrumbs %}
 <ul class="breadcrumb">
     <li>
-        <a href="{% url dashboard:index %}">Dashboard</a>
+	<a href="{% url dashboard:index %}">{% trans "Dashboard" %}</a>
         <span class="divider">/</span>
     </li>
     <li>
-        <a href="{% url dashboard:voucher-list %}">Vouchers</a>
+	<a href="{% url dashboard:voucher-list %}">{% trans "Vouchers" %}</a>
         <span class="divider">/</span>
     </li>
-	<li class="active"><a href=".">Voucher '{{ voucher.name }}'</a></li>
+	<li class="active"><a href=".">{% blocktrans %}Voucher '{{ voucher.name }}'{% endblocktrans %}</a></li>
 </ul>
 {% endblock %}
 
 {% block header %}
 <div class="page-header">
-	<h1>Voucher '{{ voucher.name }}'</h1>
+	<h1>{% blocktrans %}Voucher '{{ voucher.name }}'{% endblocktrans %}</h1>
 </div>
 {% endblock header %}
 
@@ -30,34 +31,34 @@ Voucher '{{ voucher.name }}' | Vouchers | {{ block.super }}
     <h2>Voucher details</h2>
 	<table class="table">
 		<tbody>
-			<tr><th>Name</th><td>{{ voucher.name }}</td></tr>
-			<tr><th>Code</th><td>{{ voucher.code }}</td></tr>
-			<tr><th>Start date</th><td>{{ voucher.start_date }}</td></tr>
-			<tr><th>End date</th><td>{{ voucher.end_date }}</td></tr>
-			<tr><th>Usage</th><td>{{ voucher.usage }}</td></tr>
-			<tr><th>Discount</th><td>{{ voucher.benefit.description }}</td></tr>
+			<tr><th>{% trans "Name" %}</th><td>{{ voucher.name }}</td></tr>
+			<tr><th>{% trans "Code" %}</th><td>{{ voucher.code }}</td></tr>
+			<tr><th>{% trans "Start date" %}</th><td>{{ voucher.start_date }}</td></tr>
+			<tr><th>{% trans "End date" %}</th><td>{{ voucher.end_date }}</td></tr>
+			<tr><th>{% trans "Usage" %}</th><td>{{ voucher.usage }}</td></tr>
+			<tr><th>{% trans "Discount" %}</th><td>{{ voucher.benefit.description }}</td></tr>
 		</tbody>
 	</table>
 
-    <h2>Voucher performance</h2>
+	<h2>{% trans "Voucher performance" %}</h2>
 	<table class="table">
 		<tbody>
-			<tr><th>Number of basket additions</th><td>{{ voucher.num_basket_additions }}</td></tr>
-			<tr><th>Number of orders</th><td>{{ voucher.num_orders }}</td></tr>
-			<tr><th>Total discount</th><td>{{ voucher.total_discount }}</td></tr>
+			<tr><th>{% trans "Number of basket additions" %}</th><td>{{ voucher.num_basket_additions }}</td></tr>
+			<tr><th>{% trans "Number of orders" %}</th><td>{{ voucher.num_orders }}</td></tr>
+			<tr><th>{% trans "Total discount" %}</th><td>{{ voucher.total_discount }}</td></tr>
 		</tbody>
 	</table>
 
-    <h2>Recent orders</h2>
+	<h2>{% trans "Recent orders" %}</h2>
 	{% if not discounts %}
-	<p>No orders have been placed that use this voucher.</p>
+	<p>{% trans "No orders have been placed that use this voucher." %}</p>
 	{% else %}
 	<table class="table">
 		<thead>
-			<th>Order number</th>
-			<th>Order total</th>
-			<th>Discount</th>
-			<th>Date placed</th>
+			<th>{% trans "Order number" %}</th>
+			<th>{% trans "Order total" %}</th>
+			<th>{% trans "Discount" %}</th>
+			<th>{% trans "Date placed" %}</th>
 			<th></th>
 		</thead>
 		<tbody>
@@ -68,7 +69,7 @@ Voucher '{{ voucher.name }}' | Vouchers | {{ block.super }}
 					<td>{{ order.total_incl_tax|currency }}</td>
 					<td>{{ discount.amount|currency }}</td>
 					<td>{{ order.date_placed }}</td>
-					<td><a href="{% url dashboard:order-detail order.number %}" class="btn btn-info">View</a></td>
+					<td><a href="{% url dashboard:order-detail order.number %}" class="btn btn-info">{% trans "View" %}</a></td>
 				</tr>
 			{% endwith %}
 			{% endfor %}
@@ -77,9 +78,9 @@ Voucher '{{ voucher.name }}' | Vouchers | {{ block.super }}
 	{% endif %}
 
 	<div class="form-actions">
-		<a class="btn btn-primary" href="{% url dashboard:voucher-update voucher.id %}">Edit</a> or
-		<a class="btn btn-danger" href="{% url dashboard:voucher-delete voucher.id %}">Delete</a> or
-		<a href="{% url dashboard:voucher-list %}">cancel</a>
+		<a class="btn btn-primary" href="{% url dashboard:voucher-update voucher.id %}">{% trans "Edit" %}</a> {% trans "or" %}
+		<a class="btn btn-danger" href="{% url dashboard:voucher-delete voucher.id %}">{% trans "Delete" %}</a> {% trans "or" %}
+		<a href="{% url dashboard:voucher-list %}">{% trans "cancel" %}</a>
 	</div>
 
 
