--- a/oscar/templates/dashboard/orders/line_detail.html
+++ b/oscar/templates/dashboard/orders/line_detail.html
@@ -28,7 +28,7 @@ Order {{ order.number }} - Line #{{ line.id }} | {{ block.super }}
 
 {% block header %}
 <div class="page-header">
-    <h1>Order #{{ order.number }} - Line #{{ line.id }}</h1>
+	<h1>{% blocktrans %}Order #{{ order.number }} - Line #{{ line.id }}{% endblocktrans %}</h1>
 </div>
 {% endblock header %}
 
@@ -36,44 +36,44 @@ Order {{ order.number }} - Line #{{ line.id }} | {{ block.super }}
 
 <div class="row-fluid">
     <div class="span4">
-        <h3>Product details</h3>
+		<h3>{% trans "Product details" %}</h3>
         <table class="table table-striped table-bordered">
             <tr>
-        		<th>Title</th><td>{{ line.title }}</td>
+				<th>{% trans "Title" %}</th><td>{{ line.title }}</td>
             </tr>
             <tr>
-        		<th>UPC</th><td>{{ line.upc|default:"-" }}</td>
+				<th>{% trans "UPC" %}</th><td>{{ line.upc|default:"-" }}</td>
             </tr>
             <tr>
-        		<th>Quantity</th><td>{{ line.quantity }}</td>
+				<th>{% trans "Quantity" %}</th><td>{{ line.quantity }}</td>
             </tr>
         </table>
     </div>
     <div class="span4">
-        <h3>Partner details</h3>
+		<h3>{% trans "Partner details" %}</h3>
         <table class="table table-striped table-bordered">
             <tr>
-        		<th>Status</th><td>{{ line.status|default:"-" }}</td>
+				<th>{% trans "Status" %}</th><td>{{ line.status|default:"-" }}</td>
             </tr>
             <tr>
-        		<th>Partner</th><td>{{ line.partner_name }}</td>
+				<th>{% trans "Partner" %}</th><td>{{ line.partner_name }}</td>
             </tr>
             <tr>
-        		<th>Partner SKU</th><td>{{ line.partner_sku }}</td>
+				<th>{% trans "Partner SKU" %}</th><td>{{ line.partner_sku }}</td>
             </tr>
         </table>
     </div>
     <div class="span4">
-        <h3>Shipping details</h3>
+		<h3>{% trans "Shipping details" %}</h3>
         <table class="table table-striped table-bordered">
         	<tr>
-        		<th>Partner reference number</th><td>{{ line.partner_line_reference|default:"-" }}</td>
+				<th>{% trans "Partner reference number" %}</th><td>{{ line.partner_line_reference|default:"-" }}</td>
         	</tr>
         	<tr>
-        		<th>Partner notes</th><td>{{ line.partner_line_notes|default:"-" }}</td>
+				<th>{% trans "Partner notes" %}</th><td>{{ line.partner_line_notes|default:"-" }}</td>
         	</tr>
         	<tr>
-        		<th>Estimate dispatch date</th><td>{{ line.est_dispatch_date }}</td>
+				<th>{% trans "Estimate dispatch date" %}</th><td>{{ line.est_dispatch_date }}</td>
         	</tr>
         </table>
     </div>
