--- a/oscar/templates/dashboard/orders/order_detail.html
+++ b/oscar/templates/dashboard/orders/order_detail.html
@@ -1,20 +1,21 @@
 {% extends 'dashboard/layout.html' %}
 {% load currency_filters %}
+{% load i18n %}
 
 {% block body_class %}orders{% endblock %}
 
 {% block title %}
-Order {{ order.number }} | {{ block.super }}
+{% blocktrans %}Order {{ order.number }}{% endblocktrans %} | {{ block.super }}
 {% endblock %}
 
 {% block breadcrumbs %}
 <ul class="breadcrumb">
     <li>
-        <a href="{% url dashboard:index %}">Dashboard</a>
+	<a href="{% url dashboard:index %}">{% trans "Dashboard" %}</a>
         <span class="divider">/</span>
     </li>
     <li>
-        <a href="{% url dashboard:order-list %}">Orders</a>
+	<a href="{% url dashboard:order-list %}">{% trans "Orders" %}</a>
         <span class="divider">/</span>
     </li>
 	<li class="active"><a href=".">#{{ order.number }}</a></li>
@@ -23,55 +24,55 @@ Order {{ order.number }} | {{ block.super }}
 
 {% block header %}
 <div class="page-header">
-    <h1>Order #{{ order.number }}</h1>
+	<h1>{% blocktrans %}Order #{{ order.number }}{% endblocktrans %}</h1>
 </div>
 {% endblock header %}
 
 {% block dashboard_content %}
 
-    <h3>Customer Information</h3>
+<h3>{% trans "Customer Information" %}</h3>
 	{% if order.user %}
 
     <div class="row-fluid">
         <div class="span4">
             <div class="well well-info">
-                <h4>Name</h4>
+				<h4>{% trans "Name" %}</h4>
                 <p>{{ order.user.get_full_name|default:"-" }}</p>
             </div>
         </div>
         <div class="span4">
             <div class="well well-info">
-                <h4>Email address</h4>
+				<h4>{% trans "Email address" %}</h4>
                 <p>{{ order.user.email|default:"-" }}</p>
             </div>
         </div>
     </div>
 	{% else %}
-	<p>Customer checked out anonymously.</p>
+	<p>{% trans "Customer checked out anonymously." %}</p>
 	{% endif %}
-	<h3>Order information</h3>
+	<h3>{% trans "Order information" %}</h3>
     <div class="row-fluid">
         <div class="span2">
             <div class="well well-info">
-                <h4>Order Total</h4>
+				<h4>{% trans "Order Total" %}</h4>
                 <p>{{ order.total_incl_tax|currency }}</p>
             </div>
         </div>
         <div class="span2">
             <div class="well well-info">
-                <h4>Date of purchase</h4>
+				<h4>{% trans "Date of purchase" %}</h4>
                 <p>{{ order.date_placed|date:"d/m/y" }}</p>
             </div>
         </div>
         <div class="span2">
             <div class="well well-info">
-                <h4>Time of purchase</h4>
+				<h4>{% trans "Time of purchase" %}</h4>
                 <p>{{ order.date_placed|date:"H:s" }}</p>
             </div>
         </div>
         <div class="span2">
             <div class="well well-info">
-                <h4>Status</h4>
+				<h4>{% trans "Status" %}</h4>
                 <p>{{ order.status|default:"N/A" }}</p>
             </div>
         </div>
@@ -79,19 +80,19 @@ Order {{ order.number }} | {{ block.super }}
 
 
 <div class="sub-header">
-    <h2>Order Details</h2>
+	<h2>{% trans "Order Details" %}</h2>
 </div>
 
 
 <div class="tabbable dashboard">
 	<ul class="nav nav-tabs">
 	{% block nav_tabs %}
-		<li class="active"><a href="#lines" data-toggle="tab">Order contents</a></li>
-		<li><a href="#shipping" data-toggle="tab">Shipping</a></li>
-		<li><a href="#payment" data-toggle="tab">Payment</a></li>
-		<li><a href="#discounts" data-toggle="tab">Discounts</a></li>
-		<li><a href="#emails" data-toggle="tab">Emails</a></li>
-		<li><a href="#notes" data-toggle="tab">Notes</a></li>
+		<li class="active"><a href="#lines" data-toggle="tab">{% trans "Order contents" %}</a></li>
+		<li><a href="#shipping" data-toggle="tab">{% trans "Shipping" %}</a></li>
+		<li><a href="#payment" data-toggle="tab">{% trans "Payment" %}</a></li>
+		<li><a href="#discounts" data-toggle="tab">{% trans "Discounts" %}</a></li>
+		<li><a href="#emails" data-toggle="tab">{% trans "Emails" %}</a></li>
+		<li><a href="#notes" data-toggle="tab">{% trans "Notes" %}</a></li>
 	{% endblock nav_tabs %}
 	</ul>
 
@@ -99,23 +100,23 @@ Order {{ order.number }} | {{ block.super }}
 
 		<div class="tab-pane active" id="lines">
 			<div class="sub-header">
-				<h3 class="app-ico ico_shop_bag icon">Items ordered</h3>
+				<h3 class="app-ico ico_shop_bag icon">{% trans "Items ordered" %}</h3>
 			</div>
 			<form action="." method="post" class="form-inline">
 				{% csrf_token %}
 				<table class="table table-striped table-bordered">
 					<thead>
 						<tr>
-							<th>Select</th>
-							<th>Quantity</th>
-							<th>Product</th>
-							<th>UPC</th>
-							<th>Status</th>
-							<th>Supplier</th>
-							<th>Supplier SKU</th>
-							<th>Est. delivery date</th>
-							<th>Price (before discounts)</th>
-							<th>Actions</th>
+							<th>{% trans "Select" %}</th>
+							<th>{% trans "Quantity" %}</th>
+							<th>{% trans "Product" %}</th>
+							<th>{% trans "UPC" %}</th>
+							<th>{% trans "Status" %}</th>
+							<th>{% trans "Supplier" %}</th>
+							<th>{% trans "Supplier SKU" %}</th>
+							<th>{% trans "Est. delivery date" %}</th>
+							<th>{% trans "Price (before discounts)" %}</th>
+							<th>{% trans "Actions" %}</th>
 						</tr>
 					</thead>
 					<tbody>
@@ -134,25 +135,25 @@ Order {{ order.number }} | {{ block.super }}
 							<td>{{ line.est_dispatch_date }}</td>
 							<td>{{ line.line_price_before_discounts_incl_tax|currency }}</td>
 							<td>
-								<a href="{% url dashboard:order-line-detail order.number line.id %}" class="btn btn-info">View</a>
+								<a href="{% url dashboard:order-line-detail order.number line.id %}" class="btn btn-info">{% trans "View" %}</a>
 							</td>
 						</tr>
 						{% endfor %}
 						<tr>
 							<td colspan="7"></td>
-							<th>Discount</th>
+							<th>{% trans "Discount" %}</th>
 							<td>{{ order.total_discount_incl_tax|currency }}</td>
 							<td></td>
 						</tr>
 						<tr>
 							<td colspan="7"></td>
-							<th>Shipping charge</th>
+							<th>{% trans "Shipping charge" %}</th>
 							<td>{{ order.shipping_incl_tax|currency }}</td>
 							<td></td>
 						</tr>
 						<tr>
 							<td colspan="7"></td>
-							<th>Total</th>
+							<th>{% trans "Total" %}</th>
 							<td>{{ order.total_incl_tax|currency }}</td>
 							<td></td>
 						</tr>
@@ -165,11 +166,11 @@ Order {{ order.number }} | {{ block.super }}
 				<div class="control-group">
 					<div class="controls">
 						<label class="radio inline">
-							<input type="radio" name="line_action" value="change_line_statuses" /> Change status to
+							<input type="radio" name="line_action" value="change_line_statuses" /> {% trans "Change status to" %}
 						</label>
 						<label class="radio inline">
 							<select name="new_status">
-								<option value=""> -- choose new status -- </option>
+								<option value=""> -- {% trans "choose new status" %} -- </option>
 								{% for status in line_statuses %}
 								<option>{{ status }}</option>
 								{% endfor %}
@@ -180,11 +181,11 @@ Order {{ order.number }} | {{ block.super }}
 				<div class="control-group">
 					<div class="controls">
 						<label class="radio inline">
-							<input type="radio" name="line_action" value="create_shipping_event" /> Create shipping event
+							<input type="radio" name="line_action" value="create_shipping_event" /> {% trans "Create shipping event" %}
 						</label>
 						<label class="radio inline">
 							<select name="shipping_event_type">
-								<option value=""> -- choose event type -- </option>
+								<option value=""> -- {% trans "choose event type" %} -- </option>
 								{% for event_type in shipping_event_types %}
 								<option value="{{ event_type.code }}">{{ event_type.name }}</option>
 								{% endfor %}
@@ -198,11 +199,11 @@ Order {{ order.number }} | {{ block.super }}
 				<div class="control-group">
 					<div class="controls">
 						<label class="radio inline">
-							<input type="radio" name="line_action" value="create_payment_event" /> Create payment event
+							<input type="radio" name="line_action" value="create_payment_event" /> {% trans "Create payment event" %}
 						</label>
 						<label class="radio inline">
 							<select name="payment_event_type">
-								<option value=""> -- choose event type -- </option>
+								<option value=""> -- {% trans "choose event type" %} -- </option>
 								{% for event_type in payment_event_types %}
 								<option value="{{ event_type.code }}">{{ event_type.name }}</option>
 								{% endfor %}
@@ -215,23 +216,23 @@ Order {{ order.number }} | {{ block.super }}
 				</div>
 
 				<div class="form-actions">
-					<input type="submit" value="Go!" class="btn btn-primary" />
+					<input type="submit" value="{% trans "Go!" %}" class="btn btn-primary" />
 				</div>
 			</form>
 			{% endblock line_actions %}
 
 			<div class="sub-header">
-				<h3 class="app-ico ico_favourite icon">Shipping Events</h3>
+				<h3 class="app-ico ico_favourite icon">{% trans "Shipping Events" %}</h3>
 			</div>
 			{% with events=order.shipping_events.all %}
 			{% if events %}
 			<table class="table table-striped table-bordered">
 				<thead>
 					<tr>
-						<th>Date</th>
-						<th>Event</th>
-						<th>Lines</th>
-						<th>Notes</th>
+						<th>{% trans "Date" %}</th>
+						<th>{% trans "Event" %}</th>
+						<th>{% trans "Lines" %}</th>
+						<th>{% trans "Notes" %}</th>
 					</tr>
 				</thead>
 				<tbody>
@@ -242,7 +243,7 @@ Order {{ order.number }} | {{ block.super }}
 						<td rowspan="{{ line_qtys|length }}">{{ event.event_type.name }}</td>
 						<td>
 							{% for line_qty in event.line_quantities.all %}
-							Product: {{ line_qty.line.title }} - quantity {{ line_qty.quantity }}</br>
+							{% trans "Product:" %} {{ line_qty.line.title }} - {% trans "quantity" %} {{ line_qty.quantity }}</br>
 							{% endfor %}
 						</td>
 						<td>{{ event.notes }}</td>
@@ -257,17 +258,17 @@ Order {{ order.number }} | {{ block.super }}
 			{% endwith %}
 
 			<div class="sub-header">
-				<h3 class="app-ico ico_favourite icon">Payment Events</h3>
+				<h3 class="app-ico ico_favourite icon">{% trans "Payment Events" %}</h3>
 			</div>
 			{% with events=order.payment_events.all %}
 			{% if events %}
 			<table class="table table-striped table-bordered">
 				<thead>
 					<tr>
-						<th>Date</th>
-						<th>Event</th>
-						<th>Amount</th>
-						<th>Lines</th>
+						<th>{% trans "Date" %}</th>
+						<th>{% trans "Event" %}</th>
+						<th>{% trans "Amount" %}</th>
+						<th>{% trans "Lines" %}</th>
 					</tr>
 				</thead>
 				<tbody>
@@ -279,7 +280,7 @@ Order {{ order.number }} | {{ block.super }}
 						<td >{{ event.amount|currency }}</td>
 						<td>
 							{% for line_qty in event.line_quantities.all %}
-							Product: {{ line_qty.line.title }} - quantity {{ line_qty.quantity }}</br>
+							{% trans "Product:" %} {{ line_qty.line.title }} - {% trans "quantity" %} {{ line_qty.quantity }}</br>
 							{% endfor %}
 						</td>
 					</tr>
@@ -288,7 +289,7 @@ Order {{ order.number }} | {{ block.super }}
 				</tbody>
 			</table>
 			{% else %}
-			<p>No payment events.</p>
+			<p>{% trans "No payment events." %}</p>
 			{% endif %}
 			{% endwith %}
 
@@ -299,19 +300,19 @@ Order {{ order.number }} | {{ block.super }}
 				<table class="table">
 					<tbody>
 						<tr>
-							<th>Method</th>
+							<th>{% trans "Method" %}</th>
 							<td>{{ order.shipping_method }}</td>
 						</tr>
 						<tr>
-							<th>Charge (incl tax)</th>
+							<th>{% trans "Charge (incl tax)" %}</th>
 							<td>{{ order.shipping_incl_tax|currency }}</td>
 						</tr>
 						<tr>
-							<th>Charge (excl tax)</th>
+							<th>{% trans "Charge (excl tax)" %}</th>
 							<td>{{ order.shipping_excl_tax|currency }}</td>
 						</tr>
 						<tr>
-							<th>Address</th>
+							<th>{% trans "Address" %}</th>
 							<td>
 								{% for field in order.shipping_address.active_address_fields %}
 								{{ field }}<br/>
@@ -326,7 +327,7 @@ Order {{ order.number }} | {{ block.super }}
 		<div class="tab-pane" id="payment">
 			{% if order.billing_address %}
 				<div class="sub-header">
-					<h3 class="app-ico ico_mapmarker icon">Billing address</h3>
+					<h3 class="app-ico ico_mapmarker icon">{% trans "Billing address" %}</h3>
 				</div>
 				<p>
 				{% for field in order.billing_address.active_address_fields %}
@@ -343,13 +344,13 @@ Order {{ order.number }} | {{ block.super }}
 				<table class="table table-striped table-bordered">
 					<thead>
 						<tr>
-							<th>Source</th>
-							<th>Allocation</th>
-							<th>Amount debited</th>
-							<th>Amount refunded</th>
-						</tr>
-					</thead>
-					<tbody>
+							<th>{% trans "Source" %}</th>
+							<th>{% trans "Allocation" %}</th>
+							<th>{% trans "Amount debited" %}</th>
+							<th>{% trans "Amount refunded" %}</th>
+						</tr>  
+					</thead>	
+					<tbody> 
 						{% for source in sources %}
 						<tr>
 							<td>{{ source.source_type }}</td>
@@ -361,15 +362,15 @@ Order {{ order.number }} | {{ block.super }}
 					</tbody>
 				</table>
 			{% else %}
-				<p>No payment sources</p>
+			<p>{% trans "No payment sources" %}</p>
 			{% endif %}
 			{% endwith %}
 
 			{% block tab_transactions %}
 			<div class="sub-header">
-				<h3 class="app-ico ico_mapmarker icon">Transactions</h3>
+				<h3 class="app-ico ico_mapmarker icon">{% trans "Transactions" %}</h3>
 			</div>
-			<p>No transaction data available.</p>
+			<p>{% trans "No transaction data available." %}</p>
 			{% endblock %}
 
 		</div>
@@ -377,16 +378,16 @@ Order {{ order.number }} | {{ block.super }}
 		<div class="tab-pane" id="discounts">
 			{% block tab_discounts %}
 				<div class="sub-header">
-					<h3 class="app-ico ico_settings icon">Discounts</h3>
+					<h3 class="app-ico ico_settings icon">{% trans "Discounts" %}</h3>
 				</div>
 				{% with discounts=order.discounts.all %}
 				{% if discounts %}
 					<table class="table table-striped table-bordered">
 						<thead>
 							<tr>
-								<th>Voucher code</th>
-								<th>Offer name</th>
-								<th>Amount</th>
+								<th>{% trans "Voucher code" %}</th>
+								<th>{% trans "Offer name" %}</th>
+								<th>{% trans "Amount" %}</th>
 							</tr>
 						</thead>
 						<tbody>
@@ -400,7 +401,7 @@ Order {{ order.number }} | {{ block.super }}
 						</tbody>
 					</table>
 				{% else %}
-					<p>No discounts were applied in this order.</p>
+				<p>{% trans "No discounts were applied in this order." %}</p>
 				{% endif %}
 				{% endwith %}
 			{% endblock %}
@@ -409,25 +410,25 @@ Order {{ order.number }} | {{ block.super }}
 		<div class="tab-pane" id="emails">
 			{% block tab_emails %}
 			<div class="sub-header">
-				<h3 class="app-ico ico_email icon">Emails</h3>
+				<h3 class="app-ico ico_email icon">{% trans "Emails" %}</h3>
 			</div>
-			<p>No email data available.</p>
+			<p>{% trans "No email data available." %}</p>
 			{% endblock %}
 		</div>
 
 		<div class="tab-pane" id="notes">
 			{% block tab_notes %}
 			<div class="sub-header">
-				<h3 class="app-ico ico_comment icon">Notes</h3>
+				<h3 class="app-ico ico_comment icon">{% trans "Notes" %}</h3>
 			</div>
 			{% with notes=order.notes.all %}
 			{% if notes %}
 			<table class="table table-striped table-bordered">
 				<tr>
-					<th>Date</th>
-					<th>User</th>
-					<th>Type</th>
-					<th>Message</th>
+					<th>{% trans "Date" %}</th>
+					<th>{% trans "User" %}</th>
+					<th>{% trans "Type" %}</th>
+					<th>{% trans "Message" %}</th>
 					<th></th>
 				</tr>
 				{% for note in notes %}
@@ -438,7 +439,7 @@ Order {{ order.number }} | {{ block.super }}
 					<td>{{ note.message|linebreaks }}</td>
 					<td class="span2">
 						{% if note.is_editable %}
-						&nbsp;<a href="{% url dashboard:order-detail-note order.number note.id %}#notes" class="btn btn-info">Edit</a>
+						&nbsp;<a href="{% url dashboard:order-detail-note order.number note.id %}#notes" class="btn btn-info">{% trans "Edit" %}</a>
 						<form action="." method="post" class="pull-left">
 							{% csrf_token %}
 							<input type="hidden" name="order_action" value="delete_note" />
@@ -460,7 +461,7 @@ Order {{ order.number }} | {{ block.super }}
 				<!-- {{ note_form.as_p }} -->
 				<div class="form-actions">
 					<input type="submit" value="Save note" class="btn btn-primary" />
-					Notes are only editable for 5 minutes after being saved.
+					{% trans "Notes are only editable for 5 minutes after being saved." %}
 				</div>
 			</form>
 			{% endblock %}
