--- a/oscar/templates/dashboard/orders/statistics.html
+++ b/oscar/templates/dashboard/orders/statistics.html
@@ -1,21 +1,24 @@
 {% extends 'dashboard/layout.html' %}
 {% load currency_filters %}
+{% load i18n %}
+
 {% block body_class %}orders{% endblock %}
+
 {% block title %}
-Order statistics | {{ block.super }}
+{% trans "Order statistics" %} | {{ block.super }}
 {% endblock %}
 
 {% block breadcrumbs %}
 <ul class="breadcrumb">
     <li>
-        <a href="{% url dashboard:index %}">Dashboard</a>
+	<a href="{% url dashboard:index %}">{% trans "Dashboard" %}</a>
         <span class="divider">/</span>
     </li>
     <li>
-        <a href="{% url dashboard:order-list %}">Orders</a>
+	<a href="{% url dashboard:order-list %}">{% trans "Orders" %}</a>
         <span class="divider">/</span>
     </li>
-    <li class="active"><a href=".">Statistics</a></li>
+	<li class="active"><a href=".">{% trans "Statistics" %}</a></li>
 </ul>
 {% endblock %}
 
@@ -30,32 +33,32 @@ Order statistics | {{ block.super }}
     <form method="get" action="{% url dashboard:order-stats %}" class="form-inline">
         <h3 class="app-ico ico_magnify icon">Filter</h3>
         {% include "partials/form_fields_inline.html" with form=form %}
-        <input type="submit" value="Filter result" class="btn btn-primary" />
-		<a href="{% url dashboard:order-stats %}" class="btn">Reset</a>
+		<button type="submit" class="btn btn-primary">Filter result</button>
+		<a href="{% url dashboard:order-stats %}" class="btn">{% trans "Reset" %}</a>
     </form>
 </div>
 <table class="table table-striped table-bordered">
-	<caption>Summary</caption>
+	<caption>{% trans "Summary" %}</caption>
 	<tr>
-		<th>Total orders</th>
+		<th>{% trans "Total orders" %}</th>
 		<td>{{ total_orders }}</td>
 	</tr>
 	<tr>
-		<th>Total lines</th>
+		<th>{% trans "Total lines" %}</th>
 		<td>{{ total_lines }}</td>
 	</tr>
 	<tr>
-		<th>Total revenue</th>
+		<th>{% trans "Total revenue" %}</th>
 		<td>{{ total_revenue|currency }}</td>
 	</tr>
 </table>
 
 {% if order_status_breakdown %}
 <table class="table table-striped table-bordered">
-	<caption>Order status breakdown</caption>
+	<caption>{% trans "Order status breakdown" %}</caption>
 	<tr>
-		<th>Status</th>
-		<th>Frequency</th>
+		<th>{% trans "Status" %}</th>
+		<th>{% trans "Frequency" %}</th>
 	</tr>
 	{% for dict in order_status_breakdown %}
 	<tr>
