--- a/oscar/templates/dashboard/pages/update.html
+++ b/oscar/templates/dashboard/pages/update.html
@@ -1,20 +1,23 @@
 {% extends 'dashboard/layout.html' %}
 {% load currency_filters %}
+{% load i18n %}
+
 {% block body_class %}pages{% endblock %}
 {% block title %}
 {{ title }} | {{ block.super }}
 {% endblock %}
+
 {% block breadcrumbs %}
 <ul class="breadcrumb">
     <li>
-        <a href="{% url dashboard:index %}">Dashboard</a>
+	<a href="{% url dashboard:index %}">{% trans "Dashboard" %}</a>
         <span class="divider">/</span>
     </li>
     <li>
-        <a href="{% url dashboard:page-list %}">Page management</a>
+	<a href="{% url dashboard:page-list %}">{% trans "Page management" %}</a>
         <span class="divider">/</span>
     </li>
-    <li class="active"><a href=".">Update page</a></li>
+	<li class="active"><a href=".">{% trans "Update page" %}</a></li>
 </ul>
 {% endblock %}
 {% block header %}
@@ -28,16 +31,17 @@
 <form action="." method="post" class="form-horizontal">
 	{% csrf_token %}
 
-		<legend>Page</legend>
+	<legend>{% trans "Page" %}</legend>
 		{% include "partials/form_fields.html" with form=form %}
 
 		<div class="form-actions">
-                <button class="btn btn-primary" type="submit">Save</button> or 
-                <a href="{% url dashboard:page-list %}">cancel</a>
+			<button class="btn btn-primary" type="submit">{% trans "Save" %}</button> {% trans "or" %}
+			<a href="{% url dashboard:page-list %}">{% trans "cancel" %}</a>
 		</div>
 </form>
+
 {% if page %}
-<p><a class="btn btn-success" href="{{ page.get_absolute_url }}">View on site</a></p>
+<p><a class="btn btn-success" href="{{ page.get_absolute_url }}">{% trans "View on site" %}</a></p>
 {% endif %}
 
 {% endblock dashboard_content %}
