--- a/oscar/templates/dashboard/promotions/promotion_list.html
+++ b/oscar/templates/dashboard/promotions/promotion_list.html
@@ -1,24 +1,26 @@
 {% extends 'dashboard/layout.html' %}
 {% load currency_filters %}
+{% load i18n %}
+
 {% block body_class %}content-blocks{% endblock %}
 
 {% block title %}
-Content blocks | {{ block.super }}
+it{% trans "Content blocks" %} | {{ block.super }}
 {% endblock %}
 
 {% block header %}
 <div class="page-header">
-    <h1>Content blocks</h1>
+	<h1>{% trans "Content blocks" %}</h1>
 </div>
 {% endblock header %}
 
 {% block breadcrumbs %}
 <ul class="breadcrumb">
     <li>
-        <a href="{% url dashboard:index %}">Dashboard</a>
+	<a href="{% url dashboard:index %}">{% trans "Dashboard" %}</a>
         <span class="divider">/</span>
     </li>
-    <li class="active"><a href=".">Content blocks</a></li>
+	<li class="active"><a href=".">{% trans "Content blocks" %}</a></li>
 </ul>
 {% endblock %}
 
@@ -26,7 +28,7 @@ Content blocks | {{ block.super }}
 
 
 <div class="sub-header">
-    <h2>All content blocks</h2>
+	<h2>{% trans "All content blocks" %}</h2>
 </div>
 
 {% if num_promotions %}
@@ -34,11 +36,11 @@ Content blocks | {{ block.super }}
 <table class="table table-striped table-bordered">
 	<thead>
 		<tr>
-			<th>Name</th>
-			<th>Type</th>
-			<th>Number of times used</th>
-			<th>Date created</th>
-			<th>Actions</th>
+			<th>{% trans "Name" %}</th>
+			<th>{% trans "Type" %}</th>
+			<th>{% trans "Number of times used" %}</th>
+			<th>{% trans "Date created" %}</th>
+			<th>{% trans "Actions" %}</th>
 		</tr>
 	</thead>
 	<tbody>
@@ -49,8 +51,8 @@ Content blocks | {{ block.super }}
 			<td>{{ promotion.num_times_used }}</td>
 			<td>{{ promotion.date_created }}</td>
 			<td>
-				<a class="btn btn-success" href="{% url dashboard:promotion-update promotion.code promotion.id %}">Edit</a>
-				<a class="btn btn-danger" href="{% url dashboard:promotion-delete promotion.code promotion.id %}">Delete</a>
+				<a class="btn btn-success" href="{% url dashboard:promotion-update promotion.code promotion.id %}">{% trans "Edit" %}</a>
+				<a class="btn btn-danger" href="{% url dashboard:promotion-delete promotion.code promotion.id %}">{% trans "Delete" %}</a>
 			</td>
 		</tr>
 		{% endfor %}
@@ -59,15 +61,15 @@ Content blocks | {{ block.super }}
 
 {% else %}
 
-<p>No content blocks found.</p>
+<p>{% trans "No content blocks found." %}</p>
 
 {% endif %}
 
 <div class="well well-info">
-    <h3 class="app-ico ico_expand icon">Create a new content block</h3>
+	<h3 class="app-ico ico_expand icon">{% trans "Create a new content block" %}</h3>
     <form action="{% url dashboard:promotion-create-redirect %}" method="get" class="form-inline">
         {% include "partials/form_fields_inline.html" with form=select_form %}
-    	<button type="submit" class="btn btn-primary">Create block</button>
+		<button type="submit" class="btn btn-primary">{% trans "Create block" %}</button>
     </form>
 </div>
 
