--- a/oscar/templates/dashboard/reports/index.html
+++ b/oscar/templates/dashboard/reports/index.html
@@ -1,33 +1,34 @@
 {% extends 'dashboard/layout.html' %}
 {% load currency_filters %}
+{% load i18n %}
+
 {% block body_class %}reports{% endblock %}
 {% block title %}
-Reports | {{ block.super }}
+{% trans "Reports" %} | {{ block.super }}
 {% endblock %}
 
 {% block breadcrumbs %}
 <ul class="breadcrumb">
     <li>
-        <a href="{% url dashboard:index %}">Dashboard</a>
+	<a href="{% url dashboard:index %}">{% trans "Dashboard" %}</a>
         <span class="divider">/</span>
     </li>
-    <li class="active"><a href=".">Reporting Dashboard</a></li>
+	<li class="active"><a href=".">{% trans "Reporting Dashboard" %}</a></li>
 </ul>
 {% endblock %}
 
 {% block header %}
 <div class="page-header">
-    <h1>Reporting dashboard</h1>
+	<h1>{% trans "Reporting dashboard" %}</h1>
 </div>
 {% endblock header %}
 
 
 {% block dashboard_content %}
-
 <form method="get" action="." class="form-horizontal">
     {% include "partials/form_fields.html" with form=form %}
     <div class="form-actions">
-        <input type="submit" value="Generate report" class="btn btn-primary" />
+		<button type="submit" class="btn btn-primary">Generate report</button>
     </div>
 </form>
 
@@ -36,6 +37,7 @@ Reports | {{ block.super }}
 	<h3>{{ description }}</h3>
 </div>
 {% endif %}
+
 {% block report %}
 {% endblock %}
 
