--- a/oscar/templates/dashboard/reports/partials/open_basket_report.html
+++ b/oscar/templates/dashboard/reports/partials/open_basket_report.html
@@ -1,16 +1,17 @@
 {% extends 'dashboard/reports/index.html' %}
 {% load currency_filters %}
+{% load i18n %}
 
 {% block report %}
 <table class="table table-striped table-bordered">
     <tr>
-        <th>Email</th>
-        <th>Name</th>
-        <th>Num lines</th>
-        <th>Num items</th>
-        <th>Value</th>
-        <th>Date of creation</th>
-        <th>Time since creation</th>
+		<th>{% trans "Email" %}</th>
+		<th>{% trans "Name" %}</th>
+		<th>{% trans "Num lines" %}</th>
+		<th>{% trans "Num items" %}</th>
+		<th>{% trans "Value" %}</th>
+		<th>{% trans "Date of creation" %}</th>
+		<th>{% trans "Time since creation" %}</th>
     </tr>
     {% for basket in objects %}
     <tr>
