--- a/oscar/templates/dashboard/reports/partials/order_report.html
+++ b/oscar/templates/dashboard/reports/partials/order_report.html
@@ -1,14 +1,15 @@
 {% extends 'dashboard/reports/index.html' %}
 {% load currency_filters %}
+{% load i18n %}
 
 {% block report %}
 {% if objects %}
 	<table class="table table-striped table-bordered">
 		<tr>
-			<th>Order number</th>
-			<th>User</th>
-			<th>Total incl. tax</th>
-			<th>Date placed</th>
+			<th>{% trans "Order number" %}</th>
+			<th>{% trans "User" %}</th>
+			<th>{% trans "Total incl. tax" %}</th>
+			<th>{% trans "Date placed" %}</th>
 			<th></th>
 		</tr>
 		{% for order in objects %}
@@ -18,7 +19,7 @@
 			<td>{{ order.total_incl_tax|currency }}</td>
 			<td>{{ order.date_placed }}</td>
 			<td>
-				<a class="btn btn-info" href="{% url dashboard:order-detail order.number %}">View</a>
+				<a class="btn btn-info" href="{% url dashboard:order-detail order.number %}">{% trans "View" %}</a>
 			</td>
 		</tr>
 		{% endfor %}
@@ -27,6 +28,6 @@
         {% include "catalogue/partials/pagination.html" %}
     {% endif %}
 {% else %}
-	<p>No results found.</p>
+<p>{% trans "No results found." %}</p>
 {% endif %}
 {% endblock %}
