--- a/oscar/templates/dashboard/reports/partials/product_report.html
+++ b/oscar/templates/dashboard/reports/partials/product_report.html
@@ -1,13 +1,14 @@
 {% extends 'dashboard/reports/index.html' %}
 {% load currency_filters %}
+{% load i18n %}
 
 {% block report %}
 <table class="table table-striped table-bordered">
     <tr>
-        <th>Product</th>
-        <th>Views</th>
-        <th>Basket additions</th>
-        <th>Purchases</th>
+		<th>{% trans "Product" %}</th>
+		<th>{% trans "Views" %}</th>
+		<th>{% trans "Basket additions" %}</th>
+		<th>{% trans "Purchases" %}</th>
     </tr>
     {% for product in objects %}
     <tr>
