--- a/oscar/templates/dashboard/reports/partials/user_report.html
+++ b/oscar/templates/dashboard/reports/partials/user_report.html
@@ -1,19 +1,20 @@
 {% extends 'dashboard/reports/index.html' %}
 {% load currency_filters %}
+{% load i18n %}
 
 {% block report %}
 <table class="table table-striped table-bordered">
     <tr>
-        <th>Email</th>
-        <th>Name</th>
-        <th>Date registered</th>
-        <th>Product views</th>
-        <th>Basket additions</th>
-        <th>Orders</th>
-        <th>Order lines</th>
-        <th>Order items</th>
-        <th>Total spent</th>
-        <th>Date of last order</th>
+		<th>{% trans "Email" %}</th>
+		<th>{% trans "Name" %}</th>
+		<th>{% trans "Date registered" %}</th>
+		<th>{% trans "Product views" %}</th>
+		<th>{% trans "Basket additions" %}</th>
+		<th>{% trans "Orders" %}</th>
+		<th>{% trans "Order lines" %}</th>
+		<th>{% trans "Order items" %}</th>
+		<th>{% trans "Total spent" %}</th>
+		<th>{% trans "Date of last order" %}</th>
     </tr>
     {% for user in objects %}
     <tr>
