--- a/oscar/templates/dashboard/reports/partials/voucher_report.html
+++ b/oscar/templates/dashboard/reports/partials/voucher_report.html
@@ -1,13 +1,14 @@
 {% extends 'dashboard/reports/index.html' %}
 {% load currency_filters %}
+{% load i18n %}
 
 {% block report %}
 <table class="table table-striped table-bordered">
     <tr>
-        <th>Voucher code</th>
-        <th>Added to a basket</th>
-        <th>Used in an order</th>
-        <th>Total discount</th>
+		<th>{% trans "Voucher code" %}</th>
+		<th>{% trans "Added to a basket" %}</th>
+		<th>{% trans "Used in an order" %}</th>
+		<th>{% trans "Total discount" %}</th>
     </tr>
     {% for voucher in objects %}
     <tr>
