--- a/oscar/templates/dashboard/reviews/review_delete.html
+++ b/oscar/templates/dashboard/reviews/review_delete.html
@@ -1,27 +1,28 @@
 {% extends 'dashboard/layout.html' %}
 {% load currency_filters %}
+{% load i18n %}
 
 {% block title %}
-Delete review "{{ review.title|truncatechars:15 }}? | Review management | {{ block.super }}
+{% blocktrans %}Delete review '{{ review.title|truncatechars:15 }}'?{% endblocktrans %} | {% trans "Review management" %} | {{ block.super }}
 {% endblock %}
 
 {% block breadcrumbs %}
 <ul class="breadcrumb">
     <li>
-        <a href="{% url dashboard:index %}">Dashboard</a>
+	<a href="{% url dashboard:index %}">{% trans "Dashboard" %}</a>
         <span class="divider">/</span>
     </li>
     <li>
-        <a href="{% url dashboard:reviews-list %}">Reviews</a>
+	<a href="{% url dashboard:reviews-list %}">{% trans "Reviews" %}</a>
         <span class="divider">/</span>
     </li>
-    <li class="active"><a href=".">Delete review "{{ review.title|truncatechars:15 }}"?</a></li>
+	<li class="active"><a href=".">{% blocktrans %}Delete review "{{ review.title|truncatechars:15 }}"?{% endblocktrans %}</a></li>
 </ul>
 {% endblock %}
 
 {% block header %}
 <div class="page-header">
-    <h1>Delete review "{{ review.title|truncatechars:15 }}"?</h1>
+	<h1>{% blocktrans %}Delete review "{{ review.title|truncatechars:15 }}"?{% endblocktrans %}</h1>
 </div>
 {% endblock header %}
 
@@ -31,19 +32,19 @@ Delete review "{{ review.title|truncatechars:15 }}? | Review management | {{ blo
 
 	<table class="table">
             <tbody> 
-                <tr><th>Review Title</th><td>{{ review.title }}</td></tr>
-                <tr><th>Product</th><td>{{ review.product.title }}</td></tr>
-                <tr><th>User</th><td>{{ review.user.get_reviewer_name }}</td></tr>
-                <tr><th>Score</th><td>{{ review.score|floatformat:1 }}</td></tr>
-                <tr><th>Votest</th><td>{{ review.total_votes }}</td></tr>
-                <tr><th>Status</th><td>{{ review.status }}</td></tr>
-                <tr><th>Date created</th><td>{{ review.date_created }}</td></tr>
+				<tr><th>{% trans "Review Title" %}</th><td>{{ review.title }}</td></tr>
+				<tr><th>{% trans "Product" %}</th><td>{{ review.product.title }}</td></tr>
+				<tr><th>{% trans "User" %}</th><td>{{ review.user.get_reviewer_name }}</td></tr>
+				<tr><th>{% trans "Score" %}</th><td>{{ review.score|floatformat:1 }}</td></tr>
+				<tr><th>{% trans "Votest" %}</th><td>{{ review.total_votes }}</td></tr>
+				<tr><th>{% trans "Status" %}</th><td>{{ review.status }}</td></tr>
+				<tr><th>{% trans "Date created" %}</th><td>{{ review.date_created }}</td></tr>
             </tbody>
 	</table>
 
 	<div class="form-actions">
-		<button class="btn btn-danger" type="submit">Delete</button> or
-		<a href="{% url dashboard:reviews-list %}">cancel</a>
+		<button class="btn btn-danger" type="submit">{% trans "Delete" %}</button> {% trans "or" %}
+		<a href="{% url dashboard:reviews-list %}">{% trans "cancel" %}</a>
 	</div>
 </form>
 {% endblock dashboard_content %}
