--- a/oscar/templates/dashboard/reviews/review_update.html
+++ b/oscar/templates/dashboard/reviews/review_update.html
@@ -1,29 +1,30 @@
 {% extends 'dashboard/layout.html' %}
 {% load currency_filters %}
+{% load i18n %}
 
 {% block body_class %}reviews{% endblock %}
 
 {% block title %}
-Update review | {{ block.super }}
+{% trans "Update review" %} | {{ block.super }}
 {% endblock %}
 
 {% block breadcrumbs %}
 <ul class="breadcrumb">
     <li>
-        <a href="{% url dashboard:index %}">Dashboard</a>
+	<a href="{% url dashboard:index %}">{% trans "Dashboard" %}</a>
         <span class="divider">/</span>
     </li>
     <li>
-        <a href="{% url dashboard:reviews-list %}">Reviews</a>
+	<a href="{% url dashboard:reviews-list %}">{% trans "Reviews" %}</a>
         <span class="divider">/</span>
     </li>
-    <li class="active"><a href=".">Review #{{ review.id }}</a></li>
+	<li class="active"><a href=".">{% blocktrans %}Review #{{ review.id }}{% endblocktrans %}</a></li>
 </ul>
 {% endblock %}
 
 {% block header %}
 <div class="page-header">
-	<h1>Review #{{ review.id }}</h1>
+	<h1>{% blocktrans %}Review #{{ review.id }}{% endblocktrans %}</h1>
 </div>
 {% endblock header %}
 
@@ -32,7 +33,7 @@ Update review | {{ block.super }}
 	{% csrf_token %}
     <div class="well well-info">
         <div class="sub-header">
-            <h3 class="app-ico ico_expand icon">Review information</h3>
+			<h3 class="app-ico ico_expand icon">{% trans "Review information" %}</h3>
         </div>
         {{ form.first }}
         {% for field in form %}
@@ -77,8 +78,8 @@ Update review | {{ block.super }}
     </div>
 		
     <div class="form-actions">
-    <button class="btn btn-primary btn-large" type="submit">Save</button> or 
-        <a href="{% url dashboard:reviews-list %}">cancel</a>
+		<button class="btn btn-primary btn-large" type="submit">{% trans "Save" %}</button> {% trans "or" %}
+		<a href="{% url dashboard:reviews-list %}">{% trans "cancel" %}</a>
     </div>
 </form>
 {% endblock dashboard_content %}
