--- a/oscar/templates/dashboard/users/detail.html
+++ b/oscar/templates/dashboard/users/detail.html
@@ -1,19 +1,21 @@
 {% extends 'dashboard/layout.html' %}
 {% load currency_filters %}
+{% load i18n %}
+
 {% block body_class %}users{% endblock %}
 
 {% block title %}
-Customer {{ customer.email }} | {{ block.super }}
+{% blocktrans %}Customer {{ customer.email }}{% endblocktrans %} | {{ block.super }}
 {% endblock %}
 
 {% block breadcrumbs %}
 <ul class="breadcrumb">
     <li>
-        <a href="{% url dashboard:index %}">Dashboard</a>
+	<a href="{% url dashboard:index %}">{% trans "Dashboard" %}</a>
         <span class="divider">/</span>
     </li>
     <li>
-        <a href="{% url dashboard:users-index %}">Customers</a>
+	<a href="{% url dashboard:users-index %}">{% trans "Customers" %}</a>
         <span class="divider">/</span>
     </li>
 	<li class="active"><a href=".">#{{ customer.id }}</a></li>
@@ -22,58 +24,64 @@ Customer {{ customer.email }} | {{ block.super }}
 
 {% block header %}
     <div class="page-header">
-		<h1>Customer #{{ customer.id }} - {{ customer.email }}</h1>
+		<h1>{% blocktrans %}Customer #{{ customer.id }} - {{ customer.email }}{% endblocktrans %}</h1>
     </div>
 {% endblock header %}
 
 {% block dashboard_content %}
 <div class="row-fluid">
     <div class="span3">
-        <h2>General</h2>
+		<h2>{% trans "General" %}</h2>
         <div id="user_details" class="well well-info">
             <ul>
-                <li>Email: {{ customer.email }}</li>
-                <li>First name: {{ customer.first_name|default:"-" }}</li>
-                <li>Last name: {{ customer.last_name|default:"-" }}</li>
-                <li>This customer is <strong>{% if user.is_active %}active{% else %}inactive{% endif %}</strong></li>
+				<li>{% trans "Email:" %} {{ customer.email }}</li>
+				<li>{% trans "First name:" %} {{ customer.first_name|default:"-" }}</li>
+				<li>{% trans "Last name:" %} {{ customer.last_name|default:"-" }}</li>
+				<li>
+					{% if user.is_active %}
+					{% trans "This customer is active" %}
+					{% else %}
+					{% trans "This customer is inactive" %}
+					{% endif %}
+				</li>
                 {% if user.is_superuser %}
-                <li><strong>Superuser</strong></li>
+				<li><strong>{% trans "Superuser" %}</strong></li>
                 {% endif %}
             </ul>
         </div>
     </div>
 
     <div class="span9">
-        <h2>Detailed information</h2>
+		<h2>{% trans "Detailed information" %}</h2>
         <div id="user_order_details" class="row-fluid">
             <div class="span4">
                 <div class="well well-info">
-                    <h3>General</h3>
+					<h3>{% trans "General" %}</h3>
                     <ul>
-                        <li>Last login: {{ customer.last_login }}</li>
-                        <li>Date joined: {{ customer.date_joined }}</li>
-                        <li>Number of viewed products: {{ customer.userrecord.num_product_views|default:0 }}</li>
+						<li>{% trans "Last login:" %} {{ customer.last_login }}</li>
+						<li>{% trans "Date joined:" %} {{ customer.date_joined }}</li>
+						<li>{% trans "Number of viewed products:" %} {{ customer.userrecord.num_product_views|default:0 }}</li>
                     </ul>
                 </div>
             </div>
 
             <div class="span4">
                 <div class="well well-info">
-                    <h3>Orders</h3>
+					<h3>{% trans "Orders" %}</h3>
                     <ul>
-                        <li>Number of orders: {{ customer.userrecord.num_orders|default:0 }}</li>
-                        <li>Number of ordered items: {{ customer.userrecord.num_order_items|default:0 }}</li>
-                        <li>Total spent: {{ customer.userrecord.total_spent|default:0|currency }}</li>
-                        <li>Date of last order: {{ customer.userrecord.date_last_order|default:"-" }}</li>
+						<li>{% trans "Number of orders:" %} {{ customer.userrecord.num_orders|default:0 }}</li>
+						<li>{% trans "Number of ordered items:" %} {{ customer.userrecord.num_order_items|default:0 }}</li>
+						<li>{% trans "Total spent:" %} {{ customer.userrecord.total_spent|default:0|currency }}</li>
+						<li>{% trans "Date of last order:" %} {{ customer.userrecord.date_last_order|default:"-" }}</li>
                     </ul>
                 </div>
             </div>
 
             <div class="span4">
                 <div class="well well-info">
-                    <h3>Reviews</h3>
+					<h3>{% trans "Reviews" %}</h3>
                     <ul>
-                        <li>Number of reviews: {{ customer.reviews.count }}</li>
+						<li>{% trans "Number of reviews:" %} {{ customer.reviews.count }}</li>
                     </ul>
                 </div>
             </div>
@@ -84,22 +92,22 @@ Customer {{ customer.email }} | {{ block.super }}
 
 <div class="tabbable dashboard">
 	<ul class="nav nav-tabs">
-		<li class="active"><a href="#user_orders" data-toggle="tab">Orders</a></li>
-		<li><a href="#user_addresses" data-toggle="tab">Addresses</a></li>
-		<li><a href="#user_reviews" data-toggle="tab">Reviews</a></li>
+		<li class="active"><a href="#user_orders" data-toggle="tab">{% trans "Orders" %}</a></li>
+		<li><a href="#user_addresses" data-toggle="tab">{% trans "Addresses" %}</a></li>
+		<li><a href="#user_reviews" data-toggle="tab">{% trans "Reviews" %}</a></li>
 	</ul>
 
 	<div class="tab-content">
         <div id="user_orders" class="tab-pane active">
-            <h2>Orders</h2>
+			<h2>{% trans "Orders" %}</h2>
             {% if user.orders.count %}
              <table class="table table-striped table-bordered">
                  <tr>
-                     <th>Order Number</th>
-                     <th>Num items</th>
-                     <th>Total value</th>
-                     <th>Date placed</th>
-                     <th>Status</th>
+					 <th>{% trans "Order Number" %}</th>
+					 <th>{% trans "Num items" %}</th>
+					 <th>{% trans "Total value" %}</th>
+					 <th>{% trans "Date placed" %}</th>
+					 <th>{% trans "Status" %}</th>
                      <th></th>
                  </tr>
                  {% for order in user.orders.all %}
@@ -109,17 +117,17 @@ Customer {{ customer.email }} | {{ block.super }}
                      <td>{{ order.basket_total_incl_tax|currency }}</td>
                      <td>{{ order.date_placed|date:"d/m/y H:s" }}</td>
                      <td>{{ order.status }}</td>
-                     <td><a href="{% url dashboard:order-detail order.number %}" class="btn btn-info">View</a></td>
+					 <td><a href="{% url dashboard:order-detail order.number %}" class="btn btn-info">{% trans "View" %}</a></td>
                  </tr>
                  {% endfor %}
              </table>
             {% else %}
-                <p>This customer has not placed any orders yet.</p>
+			<p>{% trans "This customer has not placed any orders yet." %}</p>
             {% endif %}
         </div>
 
         <div id="user_addresses" class="tab-pane">
-            <h2>Addresses</h2>
+			<h2>{% trans "Addresses" %}</h2>
             <div class="row-fluid">
         	{% for address in user.addresses.all %}
 
@@ -137,23 +145,23 @@ Customer {{ customer.email }} | {{ block.super }}
 					{% endif %}
                 {% endif %}
 			{% empty %}
-			<p>This customer has not saved any addresses.</p>
+			<p>{% trans "This customer has not saved any addresses." %}</p>
         	{% endfor %}
             </div>
         </div>
 
         <div id="user_reviews" class="tab-pane">
             <div class="sub-header">
-                <h2>Reviews</h2>
+				<h2>{% trans "Reviews" %}</h2>
             </div>
             {% if user.reviews.count %}
             <table class="table table-striped table-bordered">
                 <tr>
-                    <th>Product ID</th>
-                    <th>Score</th>
-                    <th>Title</th>
-                    <th>Body</th>
-                    <th>Date created</th>
+					<th>{% trans "Product ID" %}</th>
+					<th>{% trans "Score" %}</th>
+					<th>{% trans "Title" %}</th>
+					<th>{% trans "Body" %}</th>
+					<th>{% trans "Date created" %}</th>
                 </tr>
                 {% for review in user.reviews.all %}
                 <tr>
@@ -166,7 +174,7 @@ Customer {{ customer.email }} | {{ block.super }}
                 {% endfor %}
             </table>
             {% else %}
-            <p>This customer has not written any reviews yet.</p>
+			<p>{% trans "This customer has not written any reviews yet." %}</p>
             {% endif %}
         </div>
 
