--- a/oscar/templates/dashboard/users/index.html
+++ b/oscar/templates/dashboard/users/index.html
@@ -1,34 +1,36 @@
 {% extends 'dashboard/layout.html' %}
 {% load dashboard_tags %}
+{% load i18n %}
+
 {% block body_class %}users{% endblock %}
 
 {% block title %}
-Customers | {{ block.super }}
+{% trans "Customers" %} | {{ block.super }}
 {% endblock %}
 
 {% block breadcrumbs %}
 <ul class="breadcrumb">
     <li>
-        <a href="{% url dashboard:index %}">Dashboard</a>
+	<a href="{% url dashboard:index %}">{% trans "Dashboard" %}</a>
         <span class="divider">/</span>
     </li>
-    <li class="active"><a href=".">Customers</a></li>
+	<li class="active"><a href=".">{% trans "Customers" %}</a></li>
 </ul>
 {% endblock %}
 
 {% block header %}
 <div class="page-header">
-    <h1>Customers</h1>
+	<h1>{% trans "Customers" %}</h1>
 </div>
 {% endblock header %}
 
 {% block dashboard_content %}
 <div class="well well-info">
-    <h3 class="app-ico ico_magnify icon">Search</h3>
+	<h3 class="app-ico ico_magnify icon">{% trans "Search" %}</h3>
     <form action="." method="get" class="form-inline">
         {% include "partials/form_fields_inline.html" with form=form %}
-        <input type="submit" value="Search" class="btn btn-primary"/>
-		<a href="{% url dashboard:users-index %}" class="btn">Reset</a>
+		<input type="submit" value="{% trans "Search" %}" class="btn btn-primary"/>
+		<a href="{% url dashboard:users-index %}" class="btn">{% trans "Reset" %}</a>
     </form>
 </div>
 <div class="sub-header">
@@ -41,13 +43,13 @@ Customers | {{ block.super }}
 <table class="table table-striped table-bordered">
     <tr>
         <th></th>
-        <th>Email</th>
-        <th>First name</th>
-        <th>Last name</th>
-        <th>Active</th>
-        <th>Staff status</th>
-        <th>Date registered</th>
-        <th>Num Orders</th>
+		<th>{% trans "Email" %}</th>
+		<th>{% trans "First name" %}</th>
+		<th>{% trans "Last name" %}</th>
+		<th>{% trans "Active" %}</th>
+		<th>{% trans "Staff status" %}</th>
+		<th>{% trans "Date registered" %}</th>
+		<th>{% trans "Num Orders" %}</th>
         <th></th>
     </tr>
     {% for user in user_list %}
@@ -61,7 +63,7 @@ Customers | {{ block.super }}
         <td>{{ user.date_joined|date:"d/m/y H:s" }}</td>
         <td>{% num_orders user %}</td>
         <td>
-            <a href="{% url dashboard:user-detail user.id %}" class="btn btn-info">View</a>
+			<a href="{% url dashboard:user-detail user.id %}" class="btn btn-info">{% trans "View" %}</a>
         </td>
     </tr>
     {% endfor %}
@@ -72,15 +74,15 @@ Customers | {{ block.super }}
 {% endif %}
 
 <div class="well well-danger">
-    <h3 class="app-ico ico_sync icon">Bulk Actions</h3>
-    <label for="inlineCheckboxes">With selected customers:</label>
+	<h3 class="app-ico ico_sync icon">{% trans "Bulk Actions" %}</h3>
+	<label for="inlineCheckboxes">{% trans "With selected customers:" %}</label>
     <label>
-        <input type="radio" name="action" value="make_active" /> Make active
+		<input type="radio" name="action" value="make_active" /> {% trans "Make active" %}
     </label>
     <label>
-        <input type="radio" name="action" value="make_inactive" /> Make inactive
+		<input type="radio" name="action" value="make_inactive" /> {% trans "Make inactive" %}
     </label>
-    <input type="submit" value="Go!" class="btn btn-primary" />
+	<input type="submit" value="{% trans "Go!" %}" class="btn btn-primary" />
 </div>
 
 
@@ -88,7 +90,7 @@ Customers | {{ block.super }}
 
 {% else %}
 
-<p>No customers found.</p>
+<p>{% trans "No customers found." %}</p>
 
 {% endif %}
 
