--- a/oscar/templates/dashboard/vouchers/voucher_form.html
+++ b/oscar/templates/dashboard/vouchers/voucher_form.html
@@ -1,18 +1,19 @@
 {% extends 'dashboard/layout.html' %}
 {% load currency_filters %}
+{% load i18n %}
 
 {% block title %}
-{{ title }} | Vouchers | {{ block.super }}
+{{ title }} | {% trans "Vouchers" %} | {{ block.super }}
 {% endblock %}
 
 {% block breadcrumbs %}
 <ul class="breadcrumb">
     <li>
-        <a href="{% url dashboard:index %}">Dashboard</a>
+	<a href="{% url dashboard:index %}">{% trans "Dashboard" %}</a>
         <span class="divider">/</span>
     </li>
     <li>
-        <a href="{% url dashboard:voucher-list %}">Vouchers</a>
+	<a href="{% url dashboard:voucher-list %}">{% trans "Vouchers" %}</a>
         <span class="divider">/</span>
     </li>
 	<li class="active"><a href=".">{{ title }}</a></li>
@@ -31,8 +32,8 @@
 	{% include "partials/form_fields.html" with form=form %}
 	{% block form_actions %}
 	<div class="form-actions">
-		<button class="btn btn-primary btn-large" type="submit">Save</button> or
-		<a href="{% url dashboard:voucher-list %}">cancel</a>
+		<button class="btn btn-primary btn-large" type="submit">{% trans "Save" %}</button> {% trans "or" %}
+		<a href="{% url dashboard:voucher-list %}">{% trans "cancel" %}</a>
 	</div>
 	{% endblock form_actions %}
 </form>
